# tum-ws24-gpu-pro

./: .gitmodules  CMakeLists.txt  README.md  README.txt
assets/Space_Ships/amy/: amy.conf
scripts/: poissondisk_samples.py
shaders/: CMakeLists.txt
shaders/glsl/: compute_transforms.comp  mesh.frag  mesh.vert  mesh_multidraw.frag  mesh_multidraw.vert  noise.h  scene.h  shadow.frag  shadow.vert  shadow_map.h  shadowmap.h  sky.frag  sky.vert  util.h  volumetric_fog.comp  volumetric_fog_raymarch.comp  volumetric_fog_util.h
shaders/src/: triangle.frag  triangle.vert
src/: CMakeLists.txt  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  FogVolumeGenerationPass.cpp  FogVolumeGenerationPass.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  ShadowPass.cpp  ShadowPass.h  main.cpp  util.cpp  util.h
